Adding the phone and address attributes . Updating the markup for authentication
