# tp4-ecommerce/app/Http/Controllers/AuthController.php
@@ -39,10 +39,12 @@ class AuthController extends Controller
      * required=true,
      * @OA\JsonContent(
      * required={"name", "email", "password", "password_confirmation"},
-     * @OA\Property(property="name", type="string", example="John Doe"),
-     * @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+     * @OA\Property(property="name", type="string", example="Raoul Ossombe"),
+     * @OA\Property(property="email", type="string", format="email", example="raoulOssombe@shopcart.com"),
      * @OA\Property(property="password", type="string", format="password", example="secret123"),
-     * @OA\Property(property="password_confirmation", type="string", format="password", example="secret123")
+     * @OA\Property(property="password_confirmation", type="string", format="password", example="secret123"),
+     * @OA\Property(property="phone", type="string", nullable=true, example="+237653982736"),
+     * @OA\Property(property="address", type="string", nullable=true, example="Yaounde,Melen") 
      * )
      * ),
      * @OA\Response(
@@ -66,6 +68,8 @@ class AuthController extends Controller
             'name' => 'required|string|max:255',
             'email' => 'required|email|unique:users',
             'password' => 'required|min:8|confirmed',
+            'phone' => 'nullable|string|max:20',
+            'address' => 'nullable|string',
         ]);
 
         $user = User::create([
@@ -73,6 +77,8 @@ class AuthController extends Controller
             'email' => $request->email,
             'password' => Hash::make($request->password),
             'role' => 'USER',
+            'phone' => $request->phone,
+            'address' => $request->address,
         ]);
 
         $token = $user->createToken('auth_token')->plainTextToken;
@@ -80,7 +86,7 @@ class AuthController extends Controller
         return response()->json([
             'message' => 'Registered',
             'token' => $token,
-            'user' => $user->only(['id', 'name', 'email', 'role'])
+            'user' => $user->only(['id', 'name', 'email', 'role', 'phone', 'address'])
         ], 201);
     }
 
@@ -94,7 +100,7 @@ class AuthController extends Controller
      * required=true,
      * @OA\JsonContent(
      * required={"email", "password"},
-     * @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+     * @OA\Property(property="email", type="string", format="email", example="raoulossombe@shopcart.com"),
      * @OA\Property(property="password", type="string", format="password", example="secret123")
      * )
      * ),
@@ -133,7 +139,7 @@ class AuthController extends Controller
         return response()->json([
             'message' => 'Login successful',
             'token' => $token,
-            'user' => $user->only(['id', 'name', 'email', 'role'])
+            'user' => $user->only(['id', 'name', 'email', 'role','phone','address'])
         ]);
     }
 
